tooling/nargo_cli/tests/snapshots/execute__tests__array_to_slice_constant_length_force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "4674829489830587963",
  "abi": {
    "parameters": [
      {
        "name": "val",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VS7QrCMAzsXEWrDsGP98jYxvbTH75IcfQ59ugqXGgIZX/WBso1NL3epalMjApoVW4SNS8gbYs2Ixclha4F1zyBDrgT53VGs069m5N/on5wCX8Z9XcOnCX7w5wF+OkAnvcS+bWXfzTI5QzxneNvXUzcN9g7dafE3xbsPd0T+vmtM7xeRc6zZpf8esaJiHXU4N+b+D8yrDiX9Q/kJ+GH0W7QGUbfhs4HP/h57j/+pviN6tsXcii9b2EFAAA=",
  "debug_symbols": "XYzBCoAgEET/Zc8dKujSr0SE2ioLomIahOy/p9AhvAy8ecwUOFFmc5DT/oJ1K2C9Eom8q1R4ABnJWjJHV98ikpAWP9TZqZ9NT8BuH6JXeOaI7ak5GFtMNbdpGeZxZ+adXw==",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
